assets/sass/styles/centered.sass
@include media-breakpoint-up(desktop)
    body:not(.full-width),
    .organizations__page
        .section-sidebar
            position: relative
            .meta-container
                padding-left: offset(3)
            .content-meta
                width: columns(6) !important
            > div
                position: static !important
            .post-infos
                > li
                    border: none
                    display: block
                    span
                        display: block
                    ul
                        text-align: left
                        li
                            margin-left: 0
                            margin-right: $spacing-1
                    .share
                        justify-content: start
                        margin-top: $spacing-2
                        margin-left: space(-4)
                        li
                            margin-right: space(2)
                // Taxonomies
                .terms
                    display: block
        .block-siblings-navigation
            .block-content
                padding-left: 0 !important
                width: 100%
        .blocks
            .block
                &-title
                    h2
                        padding-left: offset(3)
                        width: columns(9)
                &-chapter
                    .block-content
                        padding-left: offset(3)
                        .text
                            width: columns(6)
                    &--alt_background
                        .block-content
                            width: columns(9)
                            .chapter
                                padding: columns(1)
                                .text
                                    padding: 0
                                    width: 100%
                                figure
                                    max-width: 100%
                                    padding-bottom: columns(1)
                    &--with-image
                        .chapter
                            flex-direction: row-reverse
                            justify-content: space-between
                            align-items: start
                            figure
                                width: columns(3)

                &-links
                    .block-content
                        margin-left: offset(3)
                        padding-left: 0
                        width: columns(6)
                        .links
                            display: block
                            li
                                display: flex
                                flex-direction: row-reverse
                                margin-bottom: $spacing-3
                                .media
                                    width: columns(2)
                &-gallery
                    .container
                        .block-content
                            padding-left: 0
                    &--grid
                        .gallery > *
                            flex: 0 0 calc(25% - var(--grid-gutter)* 0.75)
                &-pages
                    .block-content
                        padding-left: offset(3)
                        .pages
                            grid-template-columns: repeat(3, 1fr)
                &-image,
                &-video,
                &-testimonials,
                &-files
                    .block-content
                        padding-left: offset(3)
                        width: columns(9)

    .events__page,
    .projects__page
        &.full-width,
        &:not(.full-width)
            .document-content 
                .block
                    &-summary
                        .block-content
                            padding-left: offset(3)
                            .lead
                                max-width: columns(8)
                                @include media-breakpoint-up(desktop)
                                    max-width: columns(7)

